Ajouter plus d'erreurs possibles

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,8 +59,11 @@ img{
     border-radius: 20px;
     padding:10px;
     font-size: 3rem;
-
     word-wrap: break-word;
+
+    p{
+        margin:0;
+    }
     
 }
 
